fix popup dark mode

--- a/app/src/pages/Home/components/PopUp/Popup.module.css
+++ b/app/src/pages/Home/components/PopUp/Popup.module.css
@@ -6,12 +6,12 @@
   width: 100%;
   z-index: 1;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   text-align: left;
   align-items: center;
   flex-direction: column;
+  backdrop-filter: blur(3px);
 }
 
 .errorMessage {
@@ -25,7 +25,7 @@
   padding: 32px;
   width: auto;
   border-radius: 0.5rem;
-  background-color: #FFF;
+  background-color: var(--mantine-color-body);
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   border-radius: 0.5rem;
   padding: 2rem;
@@ -49,7 +49,6 @@
 
 .label {
   display: block;
-  color: #000000;
   font-size: 1rem;
   margin-bottom: 0.5rem
 }
@@ -112,7 +111,7 @@
 .forminput {
   width: 100%;
   padding: 0.5rem 0.75rem;
-  border: 1px solid #bfc8d3;
+  border: 1px solid var(--mantine-color-default-border);
   border-radius: 0.25rem;
   font-size: 1rem;
 }
